contrast issues resolved

--- a/styles/base.css
+++ b/styles/base.css
@@ -62,6 +62,13 @@ li a {
     text-align: center;
     border-radius: 10px;
     width: 100%;
+    margin-bottom: 30px;
+}
+.updateinfo p {
+    background-color: #a3b18a;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 10px;
 }
 #lastModified {
     font-size: .8em;
